@@ -7,6 +7,7 @@ t/posix.t
 t/tempfile.t
 t/security.t
 t/object.t
+t/seekable.t
 ChangeLog
 misc/benchmark.pl
 misc/results.txt
